# valorant-detector

./: .gitignore  pyproject.toml
docs/: architecture.md  gpttalk.md  workflow.md
server/src/: main.py
server/src/app/: __init__.py
server/src/app/api/: media.py  observations.py  sessions.py
server/src/app/media/: __init__.py  image_loader.py
server/src/app/schemas/: __init__.py  media.py  observations.py  sessions.py
server/src/app/storage/: __init__.py  observation_store.py  session_store.py
server/src/app/vision/: __init__.py  health.py  roi.py
