[project]
name = "valorant-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
